# bw-inventory

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  requirements.txt
bwi/: constants.py
bwi/_utils/: jinja2.py  models.py  types.py
bwi/bot/: __init__.py  __main__.py  _add_item.py
bwi/config/: __init__.py
bwi/models/: __init__.py  __main__.py  _item.py  _itemcomment.py  _itemcommentinput.py  _itemname.py
bwi/render/: __main__.py
bwi/render/_template/: decision_block.j2  index.j2  script.j2  style.css
bwi/render/_template_consolidated/: decision_block.j2  index.j2  script.j2  style.css
